Improve currency conversion and handle failures

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ PORT=8000
 
 # Third party
 
-## OpenExchangeRates
-OER_APP_ID=
+## Open Exchange Rates
+OXR_APP_ID=
 
 ## Amazon Web Services
 AWS_ACCESS_KEY_ID="dummy"
