--- a/package.json
+++ b/package.json
@@ -30,20 +30,17 @@
   ],
   "scripts": {
     "clean:dist": "del-cli dist && del-cli .buildcache",
-    "prebuild": "yarn run lint && yarn run clean:dist",
+    "prebuild": "yarn run clean:dist",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts",
     "postlint": "yarn run format:check",
     "lint:fix": "eslint . --fix --ext .ts",
     "format:fix": "prettier --write \"./**/*.{ts,js,json,md}\"",
-    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\"",
-    "start": "node dist/index.js"
+    "format:check": "prettier --list-different \"./**/*.{ts,js,json,md}\""
   },
   "devDependencies": {
-    "@types/node": "^16.11.62",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
-    "del-cli": "^5.0.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
@@ -51,14 +48,16 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.1.1",
     "prettier": "^2.7.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@types/node": "^16.11.62",
     "axios": "^1.2.6",
+    "del-cli": "^5.0.0",
     "fastify": "^4.12.0",
     "node-graceful-shutdown": "^1.1.5",
     "squiss-ts": "^4.4.1",
+    "typescript": "^4.8.4",
     "znv": "^0.3.2",
     "zod": "^3.20.2"
   }
